// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<DocumentFragment>
  <div
    class="overflow-hidden border rounded-lg sm:flex-row md:flex bg-theme-neutral-100 border-theme-neutral-300 sm:px-8 md:px-0"
  >
    <div
      class="sc-AxiKw igrMcP sm:flex-row md:flex justify-center items-center text-center text-theme-warning-600 sm:space-y-4 md:space-y-0"
    >
      <div
        class="items-center"
      >
        <div
          class="sc-AxjAm jakjmk inline-block"
          height="26"
          width="26"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="sm:h-px md:h-full sm:border-b md:border-r border-theme-warning-600 md:ml-6 sm:mt-8 md:mt-0"
      />
    </div>
    <div
      class="sc-AxirZ hvHpGo flex-1 pr-8"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render a large one 1`] = `
<div>
  <div
    class="overflow-hidden border rounded-lg sm:flex-row md:flex bg-theme-neutral-100 border-theme-neutral-300 sm:px-8 md:px-0"
  >
    <div
      class="sc-AxiKw eDpFKd sm:flex-row md:flex justify-center items-center text-center text-theme-warning-600 sm:space-y-4 md:space-y-0"
    >
      <div
        class="items-center"
      >
        <div
          class="sc-AxjAm jakjmk inline-block"
          height="26"
          width="26"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="sm:h-px md:h-full sm:border-b md:border-r border-theme-warning-600 md:ml-6 sm:mt-8 md:mt-0"
      />
    </div>
    <div
      class="sc-AxirZ XrDuE flex-1 pr-8"
    />
  </div>
</div>
`;

exports[`Alert should render a small one 1`] = `
<div>
  <div
    class="overflow-hidden border rounded-lg sm:flex-row md:flex bg-theme-neutral-100 border-theme-neutral-300 sm:px-8 md:px-0"
  >
    <div
      class="sc-AxiKw iKOEKH sm:flex-row md:flex justify-center items-center text-center text-theme-warning-600 sm:space-y-4 md:space-y-0"
    >
      <div
        class="items-center"
      >
        <div
          class="sc-AxjAm jakjmk inline-block"
          height="26"
          width="26"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="sm:h-px md:h-full sm:border-b md:border-r border-theme-warning-600 md:ml-6 sm:mt-8 md:mt-0"
      />
    </div>
    <div
      class="sc-AxirZ dtXhZs flex-1 pr-8"
    />
  </div>
</div>
`;
